<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/_24sdp"
    tools:context=".sample.demo.presentation.ui.DemoFragment">

    <TextView
        android:id="@+id/tvWeatherTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/demo_weather_title"
        android:textAppearance="@style/TextAppearance.AndroidXmlBase.BodyEmphasis"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardWeather"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_12sdp"
        app:cardBackgroundColor="@color/color_primary_container"
        app:cardCornerRadius="@dimen/_16sdp"
        app:cardElevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvWeatherTitle"
        app:strokeWidth="0dp">

        <TextView
            android:id="@+id/tvWeather"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_16sdp"
            android:text="@string/demo_weather_loading"
            android:textAppearance="@style/TextAppearance.AndroidXmlBase.Body"
            android:textColor="@color/color_on_primary_container"
            tools:text="Partly cloudy · 31.8°C · Feels like 37.0°C · Wind 11.0 km/h" />

    </com.google.android.material.card.MaterialCardView>

    <com.example.androidxmlbase.core.ui.components.FrameButton
        android:id="@+id/btnRefreshWeather"
        android:layout_width="0dp"
        android:layout_height="@dimen/_48sdp"
        android:layout_marginTop="@dimen/_12sdp"
        app:buttonBackgroundColor="@color/color_surface"
        app:buttonCornerRadius="@dimen/_12sdp"
        app:buttonShape="rectangle"
        app:buttonStrokeColor="@color/color_primary"
        app:buttonStrokeWidth="@dimen/_1sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cardWeather">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/demo_weather_refresh"
            android:textAppearance="@style/TextAppearance.AndroidXmlBase.BodyEmphasis"
            android:textColor="@color/color_primary" />

    </com.example.androidxmlbase.core.ui.components.FrameButton>

    <TextView
        android:id="@+id/tvCounterTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_32sdp"
        android:text="@string/demo_counter_title"
        android:textAppearance="@style/TextAppearance.AndroidXmlBase.Caption"
        android:textColor="@color/color_on_surface_variant"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnRefreshWeather" />

    <TextView
        android:id="@+id/tvCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp"
        android:textAppearance="@style/TextAppearance.AndroidXmlBase.Headline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvCounterTitle"
        tools:text="0" />

    <com.example.androidxmlbase.core.ui.components.FrameButton
        android:id="@+id/btnIncrement"
        android:layout_width="0dp"
        android:layout_height="@dimen/_48sdp"
        android:layout_marginTop="@dimen/_12sdp"
        app:buttonBackgroundColor="@color/color_primary"
        app:buttonCornerRadius="@dimen/_12sdp"
        app:buttonShape="rectangle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvCount">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/increment"
            android:textAppearance="@style/TextAppearance.AndroidXmlBase.BodyEmphasis"
            android:textColor="@color/color_on_primary" />

    </com.example.androidxmlbase.core.ui.components.FrameButton>

</androidx.constraintlayout.widget.ConstraintLayout>
