<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".feature.settings.presentation.ui.SettingsActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        style="@style/Widget.AndroidXmlBase.Toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/color_background"
        app:navigationContentDescription="@string/action_back"
        app:navigationIcon="@drawable/ic_settings_back"
        app:navigationIconTint="@color/color_on_surface"
        app:title="@string/settings_title"
        app:titleTextColor="@color/color_on_surface" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:clipToPadding="false"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="@dimen/_20sdp"
            android:paddingTop="@dimen/_16sdp"
            android:paddingEnd="@dimen/_20sdp"
            android:paddingBottom="@dimen/_32sdp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings_subtitle"
                android:textAppearance="@style/TextAppearance.AndroidXmlBase.BodyMedium"
                android:textColor="@color/color_on_surface_variant" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_24sdp"
                android:layout_marginBottom="@dimen/_8sdp"
                android:text="@string/settings_personalization_section"
                android:textAppearance="@style/TextAppearance.AndroidXmlBase.BodyEmphasis"
                android:textColor="@color/color_primary" />

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/color_surface"
                app:cardCornerRadius="@dimen/_20sdp"
                app:cardElevation="0dp"
                app:strokeColor="@color/color_outline_variant"
                app:strokeWidth="@dimen/_1sdp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/rowAppearance"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:minHeight="@dimen/_80sdp"
                        android:background="?attr/selectableItemBackground"
                        android:clickable="true"
                        android:focusable="true"
                        android:paddingStart="@dimen/_16sdp"
                        android:paddingTop="@dimen/_12sdp"
                        android:paddingEnd="@dimen/_12sdp"
                        android:paddingBottom="@dimen/_12sdp">

                        <androidx.appcompat.widget.AppCompatImageView
                            android:id="@+id/ivAppearance"
                            android:layout_width="@dimen/_40sdp"
                            android:layout_height="@dimen/_40sdp"
                            android:background="@drawable/bg_settings_icon"
                            android:importantForAccessibility="no"
                            android:padding="@dimen/_10sdp"
                            android:src="@drawable/ic_settings_palette"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:tint="@color/color_on_primary_container" />

                        <TextView
                            android:id="@+id/tvAppearanceTitle"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/_16sdp"
                            android:text="@string/settings_appearance_title"
                            android:textAppearance="@style/TextAppearance.AndroidXmlBase.BodyEmphasis"
                            app:layout_constraintBottom_toTopOf="@id/tvAppearanceSummary"
                            app:layout_constraintEnd_toStartOf="@id/ivAppearanceChevron"
                            app:layout_constraintStart_toEndOf="@id/ivAppearance"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintVertical_chainStyle="packed" />

                        <TextView
                            android:id="@+id/tvAppearanceSummary"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/_16sdp"
                            android:layout_marginTop="@dimen/_2sdp"
                            android:maxLines="1"
                            android:textAppearance="@style/TextAppearance.AndroidXmlBase.BodyMedium"
                            android:textColor="@color/color_on_surface_variant"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toStartOf="@id/ivAppearanceChevron"
                            app:layout_constraintStart_toEndOf="@id/ivAppearance"
                            app:layout_constraintTop_toBottomOf="@id/tvAppearanceTitle"
                            tools:text="System default" />

                        <androidx.appcompat.widget.AppCompatImageView
                            android:id="@+id/ivAppearanceChevron"
                            android:layout_width="@dimen/_24sdp"
                            android:layout_height="@dimen/_24sdp"
                            android:importantForAccessibility="no"
                            android:src="@drawable/ic_settings_chevron"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:tint="@color/color_on_surface_variant" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_1sdp"
                        android:layout_marginStart="@dimen/_72sdp"
                        android:layout_marginEnd="@dimen/_16sdp"
                        android:background="@color/color_outline_variant" />

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/rowLanguage"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:minHeight="@dimen/_80sdp"
                        android:background="?attr/selectableItemBackground"
                        android:clickable="true"
                        android:focusable="true"
                        android:paddingStart="@dimen/_16sdp"
                        android:paddingTop="@dimen/_12sdp"
                        android:paddingEnd="@dimen/_12sdp"
                        android:paddingBottom="@dimen/_12sdp">

                        <androidx.appcompat.widget.AppCompatImageView
                            android:id="@+id/ivLanguage"
                            android:layout_width="@dimen/_40sdp"
                            android:layout_height="@dimen/_40sdp"
                            android:background="@drawable/bg_settings_icon"
                            android:importantForAccessibility="no"
                            android:padding="@dimen/_10sdp"
                            android:src="@drawable/ic_settings_language"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:tint="@color/color_on_primary_container" />

                        <TextView
                            android:id="@+id/tvLanguageTitle"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/_16sdp"
                            android:text="@string/settings_language_section_title"
                            android:textAppearance="@style/TextAppearance.AndroidXmlBase.BodyEmphasis"
                            app:layout_constraintBottom_toTopOf="@id/tvLanguageSummary"
                            app:layout_constraintEnd_toStartOf="@id/ivLanguageChevron"
                            app:layout_constraintStart_toEndOf="@id/ivLanguage"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintVertical_chainStyle="packed" />

                        <TextView
                            android:id="@+id/tvLanguageSummary"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/_16sdp"
                            android:layout_marginTop="@dimen/_2sdp"
                            android:maxLines="1"
                            android:textAppearance="@style/TextAppearance.AndroidXmlBase.BodyMedium"
                            android:textColor="@color/color_on_surface_variant"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toStartOf="@id/ivLanguageChevron"
                            app:layout_constraintStart_toEndOf="@id/ivLanguage"
                            app:layout_constraintTop_toBottomOf="@id/tvLanguageTitle"
                            tools:text="System" />

                        <androidx.appcompat.widget.AppCompatImageView
                            android:id="@+id/ivLanguageChevron"
                            android:layout_width="@dimen/_24sdp"
                            android:layout_height="@dimen/_24sdp"
                            android:importantForAccessibility="no"
                            android:src="@drawable/ic_settings_chevron"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:tint="@color/color_on_surface_variant" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>
